bk_ida/gccida/c0/cleanup_subreg_operands
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3165:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3167:39: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)**( _DWORD **)recog_data_0.operand_loc[i] == 63 ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3169:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = alter_subreg( recog_data_0.operand_loc[i]); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3169:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = alter_subreg( recog_data_0.operand_loc[i]); 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3171:42: error: use of undeclared identifier 'recog_data_0'
else if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 75 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3172:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 78 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3173:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 66 ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3175:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = walk_alter_subreg( recog_data_0.operand_loc[i]); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3175:46: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = walk_alter_subreg( recog_data_0.operand_loc[i]); 
                                             ^~~~~~~~~~~~
                                             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3178:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( ia = 0; ia < recog_data_0.n_dups; ++ia ) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3180:39: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)**( _DWORD **)recog_data_0.dup_loc[ia] == 63 ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3182:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[ia] = alter_subreg( recog_data_0.dup_loc[ia]); 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3182:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[ia] = alter_subreg( recog_data_0.dup_loc[ia]); 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3184:44: error: use of undeclared identifier 'recog_data_0'
else if ( ( unsigned __int16)**( _DWORD **)recog_data_0.dup_loc[ia] == 75 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3185:37: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)**( _DWORD **)recog_data_0.dup_loc[ia] == 78 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3186:37: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)**( _DWORD **)recog_data_0.dup_loc[ia] == 66 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3188:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[ia] = walk_alter_subreg( recog_data_0.dup_loc[ia]); 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/final.c:3188:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[ia] = walk_alter_subreg( recog_data_0.dup_loc[ia]); 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cleanup_subreg_operands/src/obj/final.o] Error 1
